--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "This is a simple code for wishing every one a happy independence day",
   "main": "App.js",
+  "bin": {
+    "independence-day": "App.js"
+  },
   "dependencies": {
     "chalk": "^4.1.0",
     "figlet": "^1.5.0",
